--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.full-page {
+    height: 100vh;
+}
+
+.hero {
+    height: 90.7vh;
+    background-image: url('./assets/library.avif'), linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
+    object-fit: cover;
+    background-blend-mode: overlay;
+}
