--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,3 +33,10 @@ table {
     background-color: #333;
     color: #ddd;
   }
+
+  .alert {
+    position: absolute;
+    bottom: 15px;
+    left: 30%;
+    width: 500px;
+  }
